# SchnoseBot

./: .env.txt  .eslintrc.js  .gitignore  .prettierrc.js  Cargo.toml  README.md  db_login.sh  package-lock.json  package.json  preview.vhs  rustfmt.toml  tsconfig.json
discord_bot/: Cargo.toml  config.toml  config.toml.example
discord_bot/src/: based_maps.rs  custom_types.rs  db.rs  error.rs  global_maps.rs  gokz.rs  gokz_ext.rs  main.rs  steam.rs  steam_ext.rs  target.rs
discord_bot/src/commands/: apistatus.rs  bmaptop.rs  bpb.rs  btop.rs  bwr.rs  db.rs  help.rs  invite.rs  map.rs  maptop.rs  mod.rs  mode.rs  nocrouch.rs  pb.rs  ping.rs  profile.rs  pull.rs  random.rs  recent.rs  recompile.rs  report.rs  restart.rs  setsteam.rs  top.rs  unfinished.rs  wr.rs
discord_bot/src/process/: mod.rs
docs/: README.md
gokz/: Cargo.toml
gokz/src/: lib.rs  structs.rs
gsi_client/: Cargo.toml  config.toml.example
gsi_client/src/: gsi.rs  gui.rs  http_server.rs  lib.rs  main.rs
migrations/: .gitignore  Cargo.toml
migrations/sql/: create_users.sql
migrations/src/: main.rs
rust/: .gitignore  Cargo.toml
rust/src/: core.rs  lib.rs  structs.rs
schnose/: Cargo.toml
schnose/src/: main.rs
schnose/src/commands/: map.rs  ping.rs
schnose_discord/: .env.txt  Cargo.toml  README.md  build.rs  config.toml.example
schnose_discord/src/: database.rs  discord.rs  error.rs  formatting.rs  gokz.rs  main.rs  prelude.rs  steam.rs  util.rs
schnose_discord/src/commands/: apistatus.rs  bmaptop.rs  bpb.rs  btop.rs  bwr.rs  db.rs  help.rs  invite.rs  map.rs  maptop.rs  mod.rs  mode.rs  nocrouch.rs  pb.rs  ping.rs  profile.rs  pull.rs  random.rs  recent.rs  recompile.rs  report.rs  restart.rs  setsteam.rs  top.rs  unfinished.rs  update.rs  wr.rs
schnose_discord/src/database/: schemas.rs  util.rs
schnose_discord/src/events/: message.rs  mod.rs  ready.rs
schnose_discord/src/events/interactions/: button.rs  mod.rs  slash_command.rs
schnose_gsi_client/: Cargo.toml
schnose_gsi_client/assets/: overlay.html
schnose_gsi_client/assets/overlay/: index.html
schnose_gsi_client/src/: config.rs  gsi.rs  gui.rs  lib.rs  logger.rs  main.rs  server.rs
schnose_gsi_client/src/gui/: colors.rs  gui_impl.rs  mod.rs  state.rs
schnose_gsi_client/src/server/: gsi.rs  mod.rs  overlay.rs  pbs.rs  wrs.rs
schnose_gsi_client/static/: overlay.html
schnosebot/: Cargo.toml
schnosebot/src/: global_maps.rs  lib.rs
src/: bot.ts  db.rs  formatting.rs  gokz.rs  main.rs  prelude.rs  schnose.rs  util.rs
src/classes/: Schnose.ts
src/commands/: apistatus.rs  apistatus.ts  bpb.rs  bpb.ts  button_test.rs  bwr.rs  bwr.ts  db.rs  db.ts  help.ts  invite.rs  invite.ts  map.rs  map.ts  mod.rs  mode.rs  mode.ts  nocrouch.rs  nocrouch.ts  pb.rs  pb.ts  ping.rs  ping.ts  profile.rs  profile.ts  random.rs  random.ts  recent.rs  recent.ts  setsteam.rs  setsteam.ts  unfinished.rs  unfinished.ts  wr.rs  wr.ts
src/commands/apistatus/: main.ts
src/commands/bpb/: api.ts  main.ts
src/commands/bwr/: api.ts  main.ts
src/commands/invite/: main.ts
src/commands/mode/: main.ts
src/commands/nocrouch/: main.ts
src/commands/pb/: api.ts  main.ts
src/commands/ping/: main.ts
src/commands/random/: main.ts
src/commands/setsteam/: main.ts
src/commands/wr/: api.ts  main.ts
src/database/: mod.rs  util.rs
src/event_handler/: interaction_create.rs  message.rs  mod.rs  ready.rs
src/events/: bing.rs  commands.rs  message.rs  messageCreate.ts  mod.rs  ready.rs  ready.ts  slash_command.rs  slash_commands.rs
src/events/interactions/: mod.rs  slash_command.rs
src/handlers/: commandHandler.ts  eventHandler.ts
src/lib/functions/: discord.ts  gokz.ts  schnose.ts  util.ts
src/lib/schemas/: user.ts
src/lib/types/: discord.d.ts  gokz.ts  schnose.d.ts  wasm.d.ts
twitch_bot/: Cargo.toml
twitch_bot/src/: client.rs  db.rs  error.rs  funny_macro.rs  global_maps.rs  main.rs  util.rs
twitch_bot/src/commands/: apistatus.rs  bpb.rs  bwr.rs  map.rs  mod.rs  mrr.rs  pb.rs  player.rs  recent.rs  wr.rs
