[package]
name = "schnose"
version = "0.9.8"
edition = "2021"

[dependencies]
dotenv = "0.15"
anyhow = "1"
log = "0.4"
env_logger = "0.10"

chrono = "0.4"
regex = "1.6"
rand = "0.8"
num-format = "0.4"
serde = "1"
serde_json = "1"
itertools = "0.10"

tokio = { version = "1", features = ["full"] }
futures = "0.3"

gokz_rs = "0.10"

mongodb = "2"
bson = { version = "2", features = ["chrono-0_4"] }

serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
