[workspace]
members = ["discord_bot"]

[workspace.dependencies]
# error handling
color-eyre = "0.6"

# logging
log = "0.4"
env_logger = "0.10"

# CLI
clap = { version = "4", features = ["derive"] }

# parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.5"

# async
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reqwest = "0.11"
once_cell = "1"

# GOKZ
gokz_rs = "0.14"

# SQL
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "mysql"] }

# util
chrono = "0.4"
rand = "0.8"
regex = "1.7"
num-format = "0.4"
