[workspace]
members = ["discord_bot", "twitch_bot"]

[workspace.dependencies]
# error handling
color-eyre = "0.6"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
	"env-filter",
	"json",
	"time",
] }
tracing-appender = "0.2"

# CLI
clap = { version = "4", features = ["derive"] }

# parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.5"

# async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# GOKZ
gokz_rs = { version = "0.17", features = [
	"global_api",
	"kzgo_api",
	"schnose_api",
] }

# SQL
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "mysql"] }

# util
chrono = "0.4"
time = { version = "0.3", features = ["macros"] }
rand = "0.8"
regex = "1.7"
num-format = "0.4"
