[package]
name = "gsi_client"
version = "0.1.0"
edition = "2021"

[dependencies]
# error handling
color-eyre = { workspace = true }

# logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { workspace = true }

# parsing
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# GOKZ
gokz_rs = { workspace = true }

# async
tokio = { version = "0.2", features = ["full"] }

# SQL
sqlx = { workspace = true }

# CS:GO
csgo-gsi = "0.3"

# egui
eframe = { version = "0.21" }
rfd = "0.11"
