[package]
name = "gsi_client"
version = "0.1.0"
edition = "2021"

[dependencies]
# error handling
color-eyre = { workspace = true }

# logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { workspace = true }

# parsing
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# GOKZ
gokz_rs = { workspace = true }

# async
tokio = { workspace = true }
futures = { workspace = true }

# SQL
sqlx = { workspace = true }

# CS:GO
schnose_gsi = { version = "0.1", features = ["gokz"] }

# egui
eframe = { version = "0.21" }
rfd = "0.11"

# http
axum = { version = "0.6", features = ["macros"] }
