[package]
name = "gokz_wasm"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.32"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.85"
chrono = { version = "0.4" }
futures = { version = "0.3.5" }
regex = { version = "1.6" }
# tokio = { version = "1", features = ["full"] }
