[package]
name = "schnose_discord"
version = "0.12.0"
authors = ["AlphaKeks <alphakeks@dawn.sh>"]
edition = "2021"
readme = "./README.md"
repository = "https://github.com/AlphaKeks/SchnoseBot"
license = "GLP-3.0"
publish = false

[dependencies.log]
version = "0.4"

[dependencies.env_logger]
version = "0.10"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.futures]
version = "0.3"

[dependencies.serenity]
version = "0.11"
default-features = false
features = [
	"builder",
	"cache",
	#"collector",
	"client",
	"gateway",
	"model",
	"rustls_backend",
]

[dependencies.poise]
version = "0.5"

[dependencies.gokz_rs]
version = "0.11"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"

[dependencies.toml]
version = "0.5"

[dependencies.lazy_static]
version = "1.4"

[dependencies.rand]
version = "0.8"

[dependencies.regex]
version = "1.7"

[dependencies.sqlx]
version = "0.6"
features = ["runtime-tokio-rustls", "mysql"]

[dependencies.dotenv]
version = "0.15"

[dependencies.chrono]
version = "0.4"

[dependencies.num-format]
version = "0.4"

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
