[package]
name = "schnose_gsi_client"
version = "0.1.0"
edition = "2021"

[dependencies]
# error handling
color-eyre = { workspace = true }

# logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { workspace = true }

# parsing
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# async
tokio = { workspace = true }

# GOKZ
gokz_rs = { workspace = true }

# GSI
schnose_gsi = { version = "0.2", features = ["gokz"] }

# GUI
eframe = { version = "0.21", features = ["persistence"] }
rfd = "0.11"
