[package]
name = "twitch_bot"
version = "0.1.0"
edition = "2021"

authors = ["AlphaKeks <alphakeks@dawn.sh>"]
repository = "https://github.com/AlphaKeks/SchnoseBot"
readme = "./README.md"
license-file = "../LICENSE"
publish = false

[dependencies]
schnosebot = { path = "../schnosebot" }

# error handling
color-eyre = { workspace = true }

# logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

# CLI
clap = { workspace = true }

# parsing
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# utility
chrono = { workspace = true }

# GOKZ
gokz_rs = { workspace = true }

# async
tokio = { workspace = true }

# SQL
sqlx = { workspace = true }

# Twitch
twitch-irc = "5"
